# ppo

./: .gitignore  LICENCE  README.md  ppo.ipynb  setup.cfg  setup.py
examples/: Pendulum-v1.ipynb
ppo/: __init__.py  ppo.ipynb
ppo/agent/: agent.py
ppo/agents/: __init__.py  advantage.py  agents.py  base_agent.py  online_ppo.py  ppo.py  random_agent.py  vanilla_ppo.py
ppo/dm_helper/: __init__.py  dm_helper.py
ppo/env_wrapper/: __init__.py  inverted_pendulum_wrapper.py  pendulum_wrapper.py  reacher_wrapper.py
ppo/env_wrapper/custom_wrappers/: action_wrapper.py
ppo/networks/: __init__.py  linear.py  policy.py  value.py
ppo/replay_buffers/: __init__.py  base_replay_buffer.py  dataloader.py  fixed_replay_buffer.py  transition.py
results/inv-pend/: config.txt  events.out.tfevents.1648833486.pop-os  events.out.tfevents.1648834539.pop-os  events.out.tfevents.1648834845.pop-os
results/pendulum/: config.txt  events.out.tfevents.1648748867.pop-os
results/reacher/: config.txt  events.out.tfevents.1648828304.pop-os  events.out.tfevents.1648830464.pop-os
src/agent/: agent.py
src/env-wrapper/: README.md  pendulum_wrapper.py
test/replay_buffers/: advantages.py  fixed_replay_buffer.py
tests/agents/: advantage.py
